tests/ui/tag-type-args.stderr
error[E0107]: missing generics for enum `Quux`
  --> $DIR/tag-type-args.rs:4:11
   |
LL | fn foo(c: Quux) { assert!((false)); }
   |           ^^^^ expected 1 generic argument
   |
note: enum defined here, with 1 generic parameter: `T`
  --> $DIR/tag-type-args.rs:1:6
   |
LL | enum Quux<T> { Bar }
   |      ^^^^ -
help: add missing generic argument
   |
LL | fn foo(c: Quux<T>) { assert!((false)); }
   |               +++

error[E0392]: type parameter `T` is never used
  --> $DIR/tag-type-args.rs:1:11
   |
LL | enum Quux<T> { Bar }
   |           ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0392.
For more information about an error, try `rustc --explain E0107`.
